--- a/airlines/flightList.html
+++ b/airlines/flightList.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="URF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>airlines</title>
+    <title>Flight List</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./flightList.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   </head>
+  
   <body>
     <div class="header">
       <div class="container">
